fix project spacing

--- a/template.css
+++ b/template.css
@@ -19,7 +19,7 @@ li{
 #header{
     font-size: 35px;
     padding-right: 655px;
-    padding-left: 20px;
+    padding-left: 10px;
     color: #977289;
 }
 
@@ -57,8 +57,8 @@ h2{
 }
 
 #projectspacing{
-    margin-top: 130px;
-    margin-bottom: 30px;
+    margin-top: 165px;
+    margin-bottom: 65px;
 }
 
 #para{
